# Portal2CoopSpeedrunMod

./: LICENSE  README.md  coop_srm.nut  gameinfo.txt
P2_Coop_SRM/: gameinfo.txt
cfg/: listenserver.cfg
scripts/vscripts/: map_activate.nut  mapspawn.nut
scripts/vscripts/mapsupport/: mp_coop_race_2.nut
src/: CMakeLists.txt
src/include/: commandline.hpp  coop_srm.hpp  logger.hpp  modules.hpp  scanner.hpp  script.hpp  vscript.hpp
src/src/: coop_srm.cpp  entry.cpp  logger.cpp  modules.cpp
